--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon" />
+    <meta content="MyAlts.pl" property="og:title" />
+    <meta
+      content="Konta Netflix, Dinsey+, Odrabiamy, Brainly, ... tanio, bezpiecznie oraz na zawsze bez dodatkowych opłat."
+      property="og:description"
+    />
+    <meta
+      content="https://media.discordapp.net/attachments/922175369019293716/1102964863900323880/logo.png?width=701&height=701"
+      property="og:image"
+    />
+    <meta content="#a449ff" data-react-helmet="true" name="theme-color" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
