--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       property="og:description"
     />
     <meta
-      content="https://media.discordapp.net/attachments/922175369019293716/1102964863900323880/logo.png?width=701&height=701"
+      content="https://media.discordapp.net/attachments/922175369019293716/1102964863900323880/logo.png"
       property="og:image"
     />
     <meta content="#a449ff" data-react-helmet="true" name="theme-color" />
